# rust_error_handle

./: Cargo.toml  github_usual_command.md  rust_usual_command.md
src/: main.rs
