[package]
name = "myFirstRust"
version = "0.1.0"
authors = ["lvzili_ext <lvzl@eastcom-sw.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv_codegen = "0.15.0"
rand = "0.5.5"
regex = "1.0.5"
clap = "2.33.3"
